# rust-bcc

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml  search-index.js
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cargo.yml
bcc/: index.html  sidebar-items.js
bcc-sys/: Cargo.toml  README.md  build.rs  rustfmt.toml  wrapper.h
bcc-sys/src/: lib.rs
bcc/core/: BPF.t.html  index.html  sidebar-items.js  struct.BPF.html
bcc/perf/: index.html
bcc/symbol/: fn.resolve_symbol_path.html  fn.resolve_symname.html  index.html  resolve_symbol_path.v.html  resolve_symname.v.html  sidebar-items.js
bcc/table/: EntryIter.t.html  index.html  sidebar-items.js  struct.Entry.html  struct.EntryIter.html  struct.Table.html
bcc/types/: MutPointer.t.html  Pointer.t.html  fd_t.t.html  index.html  sidebar-items.js  type.MutPointer.html  type.Pointer.html  type.fd_t.html
bcc_sys/: index.html  sidebar-items.js
bcc_sys/bccapi/: BPF_ABS.v.html  BPF_ADD.v.html  BPF_ALU.v.html  BPF_ALU64.v.html  BPF_AND.v.html  BPF_ANY.v.html  BPF_ARSH.v.html  BPF_B.v.html  BPF_CALL.v.html  BPF_DEVCG_ACC_MKNOD.v.html  BPF_DEVCG_ACC_READ.v.html  BPF_DEVCG_ACC_WRITE.v.html  BPF_DEVCG_DEV_BLOCK.v.html  BPF_DEVCG_DEV_CHAR.v.html  BPF_DIV.v.html  BPF_DW.v.html  BPF_END.v.html  BPF_EXIST.v.html  BPF_EXIT.v.html  BPF_FN_PREFIX.v.html  BPF_FROM_BE.v.html  BPF_FROM_LE.v.html  BPF_F_ALLOW_MULTI.v.html  BPF_F_ALLOW_OVERRIDE.v.html  BPF_F_CTXLEN_MASK.v.html  BPF_F_CURRENT_CPU.v.html  BPF_F_DONT_FRAGMENT.v.html  BPF_F_FAST_STACK_CMP.v.html  BPF_F_HDR_FIELD_MASK.v.html  BPF_F_INDEX_MASK.v.html  BPF_F_INGRESS.v.html  BPF_F_INVALIDATE_HASH.v.html  BPF_F_MARK_ENFORCE.v.html  BPF_F_MARK_MANGLED_0.v.html  BPF_F_NO_COMMON_LRU.v.html  BPF_F_NO_PREALLOC.v.html  BPF_F_NUMA_NODE.v.html  BPF_F_PSEUDO_HDR.v.html  BPF_F_QUERY_EFFECTIVE.v.html  BPF_F_RDONLY.v.html  (+715 more)
examples/: biosnoop.c  biosnoop.rs  bpf_dump_ins.rs  contextswitch.c  contextswitch.rs  cpi.c  cpi.rs  cpudist.c  cpudist.rs  execsnoop.c  execsnoop.rs  gethostlatency.c  gethostlatency.rs  hardirqs.c  hardirqs.rs  hello_bpf.c  hello_bpf.rs  llcstat.c  llcstat.rs  memory.c  memory.rs  opensnoop.c  opensnoop.rs  port_filter.c  port_filter.rs  ringbuf_output.rs  ringbuf_submit.rs  runqlat.c  runqlat.rs  smoketest.rs  softirqs.c  softirqs.rs  softirqs_0_4_0.c  softirqs_0_7_0.c  strlen.rs  tcpretrans.c  tcpretrans.rs  xdp_drop_count.c  xdp_drop_count.rs
failure/: fn.err_msg.html  index.html  macro.bail.html  macro.ensure.html  macro.format_err.html  struct.Backtrace.html  struct.Causes.html  struct.Compat.html  struct.Context.html  struct.Error.html  struct.SyncFailure.html  trait.Fail.html  trait.ResultExt.html
failure_derive/: fn.Fail.html  index.html
src/: core.rs  cpuonline.rs  error.rs  helpers.rs  lib.rs  perf.rs  symbol.rs  table.rs  types.rs  util.rs
src/backtrace/: capture.rs.html  dylib.rs.html  lib.rs.html
src/backtrace_sys/: lib.rs.html
src/bcc/: core.rs.html  lib.rs.html  perf.rs.html  symbol.rs.html  table.rs.html  types.rs.html
src/bcc_sys/: bccapi.rs.html  lib.rs.html
src/cfg_if/: lib.rs.html
src/core/: bpf.rs  kprobe.rs  mod.rs  tracepoint.rs  uprobe.rs
src/failure/: compat.rs.html  context.rs.html  error.rs.html  error_message.rs.html  lib.rs.html  macros.rs.html  result_ext.rs.html  sync_failure.rs.html
src/failure_derive/: lib.rs.html
src/kprobe/: mod.rs
src/libc/: dox.rs.html  lib.rs.html  macros.rs.html
src/perf_event/: callback.rs  events.rs  mod.rs  perf_event.rs  perf_event_array.rs  perf_map.rs  perf_reader.rs
src/quote/: ident.rs.html  lib.rs.html  to_tokens.rs.html  tokens.rs.html
src/raw_tracepoint/: mod.rs
src/ring_buf/: callback.rs  mod.rs  ring_buf.rs
src/rustc_demangle/: lib.rs.html
src/socket/: mod.rs
src/syn/: attr.rs.html  constant.rs.html  data.rs.html  derive.rs.html  escape.rs.html  generics.rs.html  ident.rs.html  lib.rs.html  lit.rs.html  mac.rs.html  op.rs.html  ty.rs.html  visit.rs.html
src/synom/: helper.rs.html  lib.rs.html  space.rs.html
src/synstructure/: lib.rs.html  macros.rs.html
src/tracepoint/: mod.rs
src/unicode_xid/: lib.rs.html  tables.rs.html
src/uprobe/: mod.rs
src/usdt/: mod.rs
src/utils/: instruction.rs  mod.rs  trace_print.rs
synstructure/: enum.BindStyle.html  index.html  macro.decl_derive.html  macro.test_derive.html  struct.BindingInfo.html  struct.Structure.html  struct.VariantAst.html  struct.VariantInfo.html
tests/: error.c  error.rs
(+52 files in other folders)
