[package]
name = "bcc"
version = "0.0.18-alpha.0"
authors = ["Julia Evans <julia@jvns.ca>", "Brian Martin <brayniac@gmail.com>"]
description = "Idiomatic Rust bindings for BPF Compiler Collection (BCC)"
keywords = ["bpf", "bindings", "bcc"]
license = "MIT"
repository = "https://github.com/rust-bpf/rust-bcc"
readme = "README.md"
documentation = "https://docs.rs/bcc"
homepage = "https://github.com/rust-bpf/rust-bcc"
edition = '2018'

[dependencies]
bcc-sys = "0.13.0"
byteorder = "1.3.4"
failure = "0.1.7"
libc = "0.2.68"
regex = "1.3.5"

[dev-dependencies]
clap = "2.33.0"
ctrlc = "3.1.4"
lazy_static = "1.4.0"
chrono = "0.4.11"

[features]
static = ["bcc-sys/static"]
specific = []
v0_4_0 = ["bcc-sys/v0_4_0", "specific"]
v0_5_0 = ["bcc-sys/v0_5_0", "specific"]
v0_6_0 = ["bcc-sys/v0_6_0", "specific"]
v0_6_1 = ["bcc-sys/v0_6_1", "specific"]
v0_7_0 = ["bcc-sys/v0_7_0", "specific"]
v0_8_0 = ["bcc-sys/v0_8_0", "specific"]
v0_9_0 = ["bcc-sys/v0_9_0", "specific"]
v0_10_0 = ["bcc-sys/v0_10_0", "specific"]
v0_11_0 = ["bcc-sys/v0_11_0", "specific"]
v0_12_0 = ["bcc-sys/v0_12_0", "specific"]
v0_13_0 = ["bcc-sys/v0_13_0", "specific"]
