[package]
name = "bcc"
version = "0.0.32"
authors = ["Julia Evans <julia@jvns.ca>", "Brian Martin <bmartin@twitter.com>"]
description = "Idiomatic Rust bindings for BPF Compiler Collection (BCC)"
keywords = ["bpf", "bindings", "bcc"]
license = "MIT"
repository = "https://github.com/rust-bpf/rust-bcc"
readme = "README.md"
documentation = "https://docs.rs/bcc"
homepage = "https://github.com/rust-bpf/rust-bcc"
edition = '2018'

[dependencies]
bcc-sys = "0.23.0"
byteorder = "1.4.3"
libc = "0.2.108"
thiserror = "1.0.30"
bitflags = "1.3.2"

[dev-dependencies]
clap = "2.33.3"
ctrlc = "3.2.1"
lazy_static = "1.4.0"
time = { version = "0.3.5", features = ["std"] }

[features]
llvm_8 = ["bcc-sys/llvm_8"]
llvm_9 = ["bcc-sys/llvm_9"]
static = ["bcc-sys/static"]
specific = []
v0_4_0 = ["bcc-sys/v0_4_0", "specific"]
v0_5_0 = ["bcc-sys/v0_5_0", "specific"]
v0_6_0 = ["bcc-sys/v0_6_0", "specific"]
v0_6_1 = ["bcc-sys/v0_6_1", "specific"]
v0_7_0 = ["bcc-sys/v0_7_0", "specific"]
v0_8_0 = ["bcc-sys/v0_8_0", "specific"]
v0_9_0 = ["bcc-sys/v0_9_0", "specific"]
v0_10_0 = ["bcc-sys/v0_10_0", "specific"]
v0_11_0 = ["bcc-sys/v0_11_0", "specific"]
v0_12_0 = ["bcc-sys/v0_12_0", "specific"]
v0_13_0 = ["bcc-sys/v0_13_0", "specific"]
v0_14_0 = ["bcc-sys/v0_14_0", "specific"]
v0_15_0 = ["bcc-sys/v0_15_0", "specific"]
v0_16_0 = ["bcc-sys/v0_16_0", "specific"]
v0_17_0 = ["bcc-sys/v0_17_0", "specific"]
v0_18_0 = ["bcc-sys/v0_18_0", "specific"]
v0_19_0 = ["bcc-sys/v0_19_0", "specific"]
v0_20_0 = ["bcc-sys/v0_20_0", "specific"]
v0_21_0 = ["bcc-sys/v0_21_0", "specific"]
v0_22_0 = ["bcc-sys/v0_22_0", "specific"]
v0_23_0 = ["bcc-sys/v0_23_0", "specific"]
