[package]
name = "bcc-sys"
version = "0.5.0"
authors = ["Zhiting Zhu <zhitingz@cs.utexas.edu>"]
description = "Rust binding to BPF Compiler Collection (BCC)"
keywords = ["bpf", "bindings"]
license = "Apache-2.0"
repository = "https://github.com/photoszzt/bcc-sys"
build = "build.rs"
readme = "README.md"
links = "bcc"
documentation = "https://docs.rs/bcc-sys/0.4.0/bcc_sys/"
homepage = "https://github.com/photoszzt/bcc-sys"

[build-dependencies]
bindgen = "0.32"
lazy_static = "0.2"

[lib]
name = "bcc_sys"
